monticore-generator/src/test/resources/cocos/invalid/A0278/A0278c.mc4
/* (c) https://github.com/MontiCore/monticore */
package cocos.invalid.A0278;

grammar A0278c extends cocos.invalid.A0278.A0278a{


    interface C extends A;

    X = A;

}
